--- a/BethanysPieShopHRM.Blazor/_Imports.razor
+++ b/BethanysPieShopHRM.Blazor/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using BethanysPieShopHRM.Blazor
 @using BethanysPieShopHRM.Blazor.Shared
+@using BethanysPieShopHRM.Blazor.Components
