quick view popup component

--- a/BethanysPieShopHRM.Blazor/Components/EmployeeCard.razor
+++ b/BethanysPieShopHRM.Blazor/Components/EmployeeCard.razor
@@ -5,9 +5,13 @@
         </div>
         <div class="card-body employee-card text-center">
             <div class="mb-3">
-                <img src="@($"https://gillcleerenpluralsight.blob.core.windows.net/person/{Employee.EmployeeId}.jpg")" 
-                    class="employee-img rounded-circle img-fluid" />
+                <img src="@($"https://gillcleerenpluralsight.blob.core.windows.net/person/{Employee.EmployeeId}.jpg")"
+                     class="employee-img rounded-circle img-fluid" />
             </div>
+            <button class="btn btn-primary btn-sm mb-1"
+                    @onclick="@(async () => await EmployeeQuickViewClicked.InvokeAsync(Employee))">
+                Quick view
+            </button>
         </div>
     </div>
 </div>
