--- a/BethanysPieShopHRM.Blazor/Components/EmployeeCard.razor
+++ b/BethanysPieShopHRM.Blazor/Components/EmployeeCard.razor
@@ -12,6 +12,12 @@
                     @onclick="@(async () => await EmployeeQuickViewClicked.InvokeAsync(Employee))">
                 Quick view
             </button>
+            <a href="@($"employeedetail/{Employee.EmployeeId}")" class="btn btn-outline-primary btn-sm mb-1">
+                Full details
+            </a>
+            <button class="btn btn-outline-primary btn-sm mb-1" @onclick="(() => NavigateToDetails(Employee))">
+                Full details btn
+            </button>
         </div>
     </div>
 </div>
